disallow-latest-image/latest-image-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: latest-tag-pod
spec:
  containers:
    - name: nginx
      image: nginx:latest
