disallow-latest-image/versioned-image-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: versioned-tag-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.21.6
